parse/internal/parser/testdata/failing/union-rem-after-ignore.trunnel
struct rem_after_ignore {
    u8 tag;
    union addr[tag] {
       4 : ignore; u8 rem[];
    };
}
